--- a/stars/index.html
+++ b/stars/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 </head>
 <body>
+   <h3>Nearby Stars</h3>
    <script type="text/javascript" src="stars.js"></script>
 </body>
 </html>
